# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python_test_and_lint.yml
gendiff/: __init__.py  cli.py  compare_dicts.py  file_parser.py  generate_diff.py  indentations.py  json.py  json_file_parser.py  plain.py  settings.py  stylish.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
test/: test_compare_dicts.py  test_file_parser.py  test_generate_diff.py  test_generate_diff_json.py  test_generate_diff_plain.py  test_generate_diff_stylish.py
test/fixtures/: file1.yaml  file3.json  file3.yaml  file6.json  filepath2.yaml
test/fixtures/compare_results/: compare_dicts_results.py  plain_results.py
test/fixtures/json_yaml/: file2.yaml  file4.json  file5.json  filepath1.yaml
